--- a/Module.ExitSlip.Domain.Test/Module.ExitSlip.Domain.Test.csproj
+++ b/Module.ExitSlip.Domain.Test/Module.ExitSlip.Domain.Test.csproj
@@ -16,36 +16,22 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1"/>
+        <PackageReference Include="TngTech.ArchUnitNET.xUnit" Version="0.11.1"/>
         <PackageReference Include="xunit" Version="2.9.2"/>
+        <PackageReference Include="Xunit.DependencyInjection" Version="9.7.0"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="coverlet.collector" Version="6.0.0"/>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
         <PackageReference Include="Moq" Version="4.20.72"/>
-        <PackageReference Include="TngTech.ArchUnitNET.xUnit" Version="0.11.1"/>
-        <PackageReference Include="xunit" Version="2.5.3"/>
-        <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3"/>
     </ItemGroup>
 
     <ItemGroup>
-        <Using Include="Xunit"/>
-        <PackageReference Include="coverlet.collector" Version="6.0.2">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1"/>
-        <PackageReference Include="xunit" Version="2.9.2"/>
-        <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
+        
         <ProjectReference Include="..\Module.ExitSlips.Domain\Module.ExitSlip.Domain.csproj"/>
         <ProjectReference Include="..\Module.ExitSlips\Module.ExitSlip.csproj"/>
         <ProjectReference Include="..\Module.ExitSlips.Infrastructure\Module.ExitSlip.Infrastructure.csproj"/>
         <ProjectReference Include="..\SharedKernel.Enums\SharedKernel.Enums.csproj"/>
-        <Using Include="Xunit"/>
     </ItemGroup>
 
 </Project>
